# ACG

./: README.md
proceduralTerrainAndTrees_project2/: 3DTurtle.cpp  CMakeLists.txt
proceduralTerrainAndTrees_project2/cmake/: FindOpenMesh.cmake
proceduralTerrainAndTrees_project2/geometry_documentation/: EWA_literature.bib  EWA_template.aux  EWA_template.bbl  EWA_template.blg  EWA_template.tex  EWA_template.toc
proceduralTerrainAndTrees_project2/inc/: 3DTurtle.hpp  Common.hpp  DrainageNetworkTree.hpp  DrainagePolygon.hpp  INoise.hpp  Lsystem.hpp  Point.hpp
proceduralTerrainAndTrees_project2/lsystems/: bush.lsystem  flower.lsystem  flower2.lsystem
proceduralTerrainAndTrees_project2/presentation/: Advanced Computer Graphics.odp  Advanced Computer Graphics.pptx
proceduralTerrainAndTrees_project2/src/: 3DTurtle.cpp  DrainageNetworkTree.cpp  Lsystem.cpp  TurtleTest.cpp  proceduralTerrainAndTrees_project2.cpp
smallPT_projectACG/: .cproject  .project  CameraModel.cpp  CameraModel.hpp  DataTypes.hpp  GAccelStruct.hpp  GBVHAccelStruct.cpp  GBVHAccelStruct.hpp  GDisplacedTriangle.cpp  GDisplacedTriangle.hpp  GObject.hpp  GPolygonObject.cpp  GPolygonObject.hpp  GPrimitiveObject.hpp  GScene.cpp  GScene.hpp  GSimpleAccelStruct.cpp  GSimpleAccelStruct.hpp  GSphere.cpp  GSphere.hpp  GTexturedTriangle.cpp  GTexturedTriangle.hpp  GTriangle.cpp  GTriangle.hpp  LICENSE  Makefile  MaterialManager.hpp  Motion.cpp  Motion.h  Motion.hpp  MotionType.cpp  MotionType.h  MotionType.hpp  ObjLoader.cpp  ObjLoader.hpp  SDLViewer.cpp  SDLViewer.hpp  SmallPT.cpp  SmallPT.hpp  (+5 more)
(+16 files in other folders)
